--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -165,6 +165,7 @@
         <attr name="edit_background" format="reference" />
         <attr name="edit_singleLine" format="boolean" />
         <attr name="edit_maxLines" format="integer" />
+        <attr name="edit_maxLength" format="integer" />
         <attr name="edit_digits" format="string" />
         <attr name="edit_ellipsize">
             <flag name="start" value="0" />
